# STM32F10x-MesonBuild-Demo

./: .clang-format  .clangd  .gitignore  .gitmodules  configure.sh  demo.code-workspace  linker.ld  main.c  meson.build  readme.md  xmake.lua
app/: console_commands.c  isr.c  main.c
cross_files/: generate_rules.lua  memory_map.lua  options.lua  stm32f103c8t6.cfg  stm32f103c8t6.ini  stm32f10x.ini  toolchain.ini  toolchain.lua
hal/: dma_channel_mapping.h
linker_sct/: linker_new.ld  linker_new.ld.in  linker_ram.ld  linker_ram_new.ld
patchs/: 0001-redirect-to-USART2.patch
proj_files/: config_enable_all  download_demo.sh  workspace_demo.json
src/: meson.build
src/app/: console_commands.c  isr.c  main.c
src/async/: async.c  async.h
src/async/arm/: context.s
src/hal/clock/: clock.c  clock.h
src/hal/gpio/: gpio.c  gpio.h
src/hal/usart/: prints.c  prints.h  usart.c  usart.h
src/start_files/: startup_stm32f10x_md.c  sys_funcs.c
src/start_files/stack_trace/: stack_trace.c
start_files/: init_calls.c  init_calls.h  startup_stm32f10x_md.c  sys_funcs.c
start_files/stack_trace/: stack_trace.c  stack_trace.h
subprojects/: STM32_StdLib.wrap  embed-utils.wrap
subprojects/STM32_StdLib/: device_info.lua  meson.build  xmake.lua
test_cases/: test_case_conf.h  test_cases.h  test_frame.c  test_frame.h
test_cases/bitmap/: bitmap_basic.c  bitmap_clear.c  bitmap_test_conf.h
test_cases/hash/: demo.c  hash_all_test.h
test_cases/map/: map_basic_test.c  map_detete_clear_test.c  map_duplcate_key.c  map_test_data.c  map_test_data.h
tools/: list_files.py
util/: arg_checkers.h  arm_isr_attr.h  asm_bridge.h  container_of.h  delay.c  gnu_attributes.h  iterators.h  linker_tools.h  strarg.c  strarg.h  value.h  value_ops.c  value_ops.h
util/bitmap/: bitmap.c  bitmap.h
util/delay/: delay.c  delay.h
util/hash/: str_hash.c  str_hash.h
util/linked_list/: double_linked_list.h  linked_list.h  linked_list_common.h  list_iterators.h
util/map/: map.c  map.h
util/mem_mana/: mem_alloc.c  mem_alloc.h  mem_conf.h  mem_mana.c  mem_mana.h  mem_pools.h
util/ringbuf/: ringbuf.c  ringbuf.h
util/tiny_console/: tiny_console.c  tiny_console.h  tiny_console_cmd.h  tiny_console_conf.h
util/tiny_console/builtin_cmds/: builtin_cmds.h  help.c
util/usart/: prints.c  prints.h
